DDF-1150 fixed broken css for source list and removed duplicate property

--- a/search-ui/standard/src/main/webapp/css/searchPage.css
+++ b/search-ui/standard/src/main/webapp/css/searchPage.css
@@ -476,6 +476,10 @@ table.metacard-table {
     cursor: default;
 }
 
+.bootstrap-select.btn-group .dropdown-menu li.disabled a span.text {
+    color: #adafae;
+}
+
 .disabled:hover {
     color: #adafae;
 }
